# ff

./: .gitignore  bazel_build_all  stack.yaml
ff-core/: ff-core.cabal  package.yaml
ff-core/foreign/FF/: Foreign.hsc
ff-core/lib/: FF.hs
ff-core/lib/FF/: Github.hs  Storage.hs
ff-qt/: BUILD  CMakeLists.txt  Main.hs  ff-qt.cabal  main.cpp
ff-test/FF/: Test.hs
ff-test/test/: Main.hs
include/ff/: types.h
test/: script
