name:           ff-qt
version:        0.2
build-type:     Simple
cabal-version:  >= 1.10

executable ff-qt
    default-language: Haskell2010
    build-depends:
          base
        , crdt
        , extra
        , inline-c-cpp
        , stm
        , text
        , time

        , ff-core

    main-is: Main.hs
    other-modules:
        Paths_ff_qt
